--- a/code/css/douban.css
+++ b/code/css/douban.css
@@ -94,11 +94,14 @@ main>section:first-child {
     position: relative;
     padding-bottom: .625rem /* 10/16 */;
     border-bottom: 1px solid #ccc;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .search-box>input[type='text'] {
-    width: calc(100% - 3.125rem);
-    padding: 8px;
+    width: calc(100% - 3.75rem);
+    padding: .5rem /* 8/16 */;
     background: #eee;
     border: none;
     border-radius: 2px;
@@ -106,11 +109,9 @@ main>section:first-child {
 }
 
 .search-box .button {
-    position: absolute;
-    right: 0;
-    font-size: .75rem /* 12/16 */;
-    padding: .40625rem .5rem;
+    margin-left: .625rem /* 10/16 */;
     background: #FF5722;
+    padding: .5rem /* 8/16 */;
     text-align: center;
     color: #fff;
     border-radius: 2px;
