--- a/code/css/reset.css
+++ b/code/css/reset.css
@@ -6,7 +6,7 @@ html,body {
     height: 100%;
 }
 
-html,body,div,span,footer,main,section,h1,h2,h3,h4,h5,h6 {
+html,body,div,span,footer,main,section,h1,h2,h3,h4,h5,h6,input {
     margin: 0;
     padding: 0;
     border: 0;
