--- a/code/css/douban.css
+++ b/code/css/douban.css
@@ -138,11 +138,13 @@ footer>div {
     font-size: .75rem /* 12/16 */;
 }
 
-footer>div>span {
+footer .wrap-tab>span {
     display: block;
-    padding-top: .25rem /* 4/16 */;
+    padding-top: .3125rem /* 5/16 */;
+    font-size: 1rem /* 16/16 */;
+    line-height: 1rem ;
 }
 
 footer .active {
-    color: rgb(240, 171, 52);
+    color: #ff5722;
 }
