--- a/code/css/douban.css
+++ b/code/css/douban.css
@@ -140,7 +140,7 @@ footer>div {
 
 footer .wrap-tab>span {
     display: block;
-    padding-top: .3125rem /* 5/16 */;
+    margin: .3125rem 0;
     font-size: 1rem /* 16/16 */;
     line-height: 1rem ;
 }
